feat: 上传可选禁止覆盖参数
